--- a/projekti.html
+++ b/projekti.html
@@ -4,12 +4,16 @@
     <title>Projekti</title>
   </head>
   <body>
-    <p id="tyyli1">
+    <p class="tyyli1">
       Tieto- ja viestintätekniikan perustehtävät
     </p>
     <form>
       <label for="nimi">Nimi</label><br>
+      <input type="text" id="nimi" name="nimi"><br>
+      <label for="tieto">Tieto</label><br>
       <input type="text" id="nimi" name="nimi">
-    <script src="proj.js"></script>
+    </form>
+    <script src="proj.js">
+    </script>
   </body>
 </html>
