--- a/projekti.html
+++ b/projekti.html
@@ -17,7 +17,7 @@
         <label for="nimi">Nimi:</label><br>
         <input type="text" id="nimi" name="nimi"><br>
         <label for="tieto">Tieto:</label><br>
-        <input type="text" id="nimi" name="nimi"><br>
+        <input type="text" id="tieto" name="tieto"><br>
         <button class="b1" id="tietonappi" type="button" onclick="Virhe()">Lisää tieto</button>
       </form>
     </div>
