alot of script and css yes

--- a/projekti.html
+++ b/projekti.html
@@ -13,6 +13,8 @@
       <p class="tyyli1">
         Lisää merkintä
       </p>
+      <div class="" id="virhediv">
+      </div>
       <form class="forms1">
         <label for="nimi">Nimi:</label><br>
         <input type="text" id="nimi" name="nimi"><br>
@@ -21,6 +23,22 @@
         <button class="b1" id="tietonappi" type="button" onclick="Virhe()">Lisää tieto</button>
       </form>
     </div>
+    <div class="" id="infodiv">
+    </div>
+    <p class="tyyli2">
+      Suoritettavat:
+    </p>
+    <form class="forms2">
+      <input type="checkbox" id="HTML" name="HTML">
+      <label for="HTML">HTML</label><br>
+      <input type="checkbox" id="CSS" name="CSS">
+      <label for="CSS">CSS</label><br>
+      <input type="checkbox" id="JS" name="JS">
+      <label for="JavaScript">JavaScript</label><br>
+      <input type="checkbox" id="CICD" name="CICD">
+      <label for="CI/CD">CI/CD</label><br>
+      <button class="b1" id="merkkinappi" type="button" onclick="">Merkkaa</button>
+    </form>
     <script src="proj.js">
     </script>
   </body>
