--- a/projekti.html
+++ b/projekti.html
@@ -29,15 +29,23 @@
       Suoritettavat:
     </p>
     <form class="forms2">
-      <input type="checkbox" id="HTML" name="HTML">
-      <label for="HTML">HTML</label><br>
-      <input type="checkbox" id="CSS" name="CSS">
-      <label for="CSS">CSS</label><br>
-      <input type="checkbox" id="JS" name="JS">
-      <label for="JavaScript">JavaScript</label><br>
-      <input type="checkbox" id="CICD" name="CICD">
-      <label for="CI/CD">CI/CD</label><br>
-      <button class="b1" id="merkkinappi" type="button" onclick="">Merkkaa</button>
+      <div class="infod1">
+        <input type="checkbox" id="HTML" name="HTML">
+        <label id="HTML1" for="HTML">HTML</label><br>
+      </div>
+      <div class="infod1">
+        <input type="checkbox" id="CSS" name="CSS">
+        <label id="CSS1" for="CSS">CSS</label><br>
+      </div>
+      <div class="infod1">  
+        <input type="checkbox" id="JS" name="JS">
+        <label id="JS1" for="JavaScript">JavaScript</label><br>
+      </div>
+      <div class="infod1">  
+        <input type="checkbox" id="CICD" name="CICD">
+        <label id="CICD1" for="CI/CD">CI/CD</label><br>
+      </div>
+      <button class="b1" id="merkkinappi" type="button" onclick="Merkkaus()">Merkkaa</button>
     </form>
     <script src="proj.js">
     </script>
